force-app/main/default/objects/Deferral__c/Deferral__c.object-meta.xml
<CustomObject>
    <description>Record for tracking when a student is deferred from one cohort to another.</description>
    <label>Deferral</label>
    <nameField>
        <displayFormat>DEF-{000}</displayFormat>
        <label>Deferral ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deferrals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>