force-app/main/default/objects/Deferral__c/fields/NewCohort__c.field-meta.xml
<CustomField>
    <fullName>NewCohort__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Which cohort the student was deferred into.</description>
    <label>New Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Deferrals Into</relationshipLabel>
    <relationshipName>DeferralsInto</relationshipName>
    <type>Lookup</type>
</CustomField>