force-app/main/default/objects/Deferral__c/fields/OldCohort__c.field-meta.xml
<CustomField>
    <fullName>OldCohort__c</fullName>
    <description>Which cohort the student was deferred from.</description>
    <label>Original Cohort</label>
    <referenceTo>Cohort__c</referenceTo>
    <relationshipLabel>Deferrals From</relationshipLabel>
    <relationshipName>DeferralsFrom</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>