force-app/main/default/objects/Deferral__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <description>Student being deferred.</description>
    <label>Student</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Deferrals</relationshipLabel>
    <relationshipName>Deferrals</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>